# pushpin

./: LICENSE  README.md  pushpin.sh  pyproject.toml
.github/workflows/: ci.yml
.pushpin/: pre-commit
docs/: README.md  index.html
pushpin/: __init__.py  __main__.py  commands.py  pushpin.sh.py
tests/: conftest.py  test_add.py  test_install.py  test_set.py  test_uninstall.py
