[tool.poetry]

name        = "pushpin"
version     = "0.4.1"
description = "Git hooks for python 📌"
authors     = ["Jung Daun <iam@nyanye.com>"]
readme      = "README.md"
license     = "MIT"
repository  = "https://github.com/nyanye/pushpin"
homepage    = "https://github.com/nat-n/poethepoet"

[tool.poetry.scripts]
pushpin = "pushpin:main"

[tool.poetry.dependencies]
python = ">=3.7.2"

[tool.poetry.dev-dependencies]
black      = "^21.10b0"
pylint     = "^2.11.1"
pytest     = "^6.2.5"
isort      = "4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
